WIP: JDK11, Spring 5.x, and Spring 2.x migration