@@ -462,7 +462,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
         Default: 1.8
     -->
-    <javaVersion>1.8</javaVersion>
+    <javaVersion>11</javaVersion>
     <build.java.version>${javaVersion}</build.java.version>
 
     <!--
@@ -1141,8 +1141,8 @@ POSSIBILITY OF SUCH DAMAGE.
     <version.group.pdfbox>1.8.17</version.group.pdfbox>
     <version.group.solr>8.11.2</version.group.solr>
     <version.group.slf4j>1.7.25</version.group.slf4j>
-    <version.group.spring>4.3.18.RELEASE</version.group.spring><!-- upgradeable -->
-    <version.group.spring-boot>1.5.17.RELEASE</version.group.spring-boot><!-- upgradeable -->
+    <version.group.spring>5.2.12.RELEASE</version.group.spring><!-- upgradeable -->
+    <version.group.spring-boot>2.3.7.RELEASE</version.group.spring-boot><!-- upgradeable -->
     <version.group.springfox>2.6.1</version.group.springfox><!-- upgradeable to 2.9.2 -->
     <version.group.truezip>7.7.10</version.group.truezip>
     <version.group.xoai>4.2.0</version.group.xoai>
@@ -1753,6 +1753,9 @@ POSSIBILITY OF SUCH DAMAGE.
         <configuration>
           <compilerArgs>
             <arg>-XDenableSunApiLintControl</arg>
+            <!-- Needed by lockss-core -->
+            <arg>--add-exports</arg><arg>java.base/sun.net=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
         <executions>
@@ -1825,6 +1828,7 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>junit-vintage-engine</artifactId>
             <version>${version.group.junit5-jupiter}</version>
           </dependency>
+
         </dependencies>
         <executions>
         
